# raptor_lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
Participants/: CMakeLists.txt
Participants/Gripper/: Gripper.cpp  Gripper.h
Participants/Item/: Item.cpp  Item.h
Participants/Participant/: Participant.cpp  Participant.h
Participants/Quad/: Quad.cpp  Quad.h  go_to_pos.cpp
include/: CMakeLists.txt  Gripper.h  Item.h  Participant.h  Quad.h  fshelper.cpp  fshelper.h
logger/: CMakeLists.txt
logger/include/: csv_helper.h  logger.h
logger/src/: logger.cpp
participants/: CMakeLists.txt
participants/Gripper/: Gripper.cpp  Gripper.h  console.cpp
participants/Item/: Item.cpp  Item.h
participants/Obstacle/: Obstacle.cpp  Obstacle.h
participants/Participant/: Participant.cpp  Participant.h  console.cpp
participants/Planner/: Astar.cpp  Astar.h
participants/Quad/: Quad.cpp  Quad.h  actions.cpp  emergency.cpp  goToPos.cpp  go_to_pos.cpp  swoop.cpp
participants/logger/: csv_helper.h  logger.cpp  logger.h
src/: Gripper.cpp  Item.cpp  Quad.cpp
test/: CMakeLists.txt  main.cpp
trajectories/: CMakeLists.txt
